--- a/styles/main.css
+++ b/styles/main.css
@@ -58,3 +58,89 @@ body {
 .header-nav a.active::after {
     background-color: #FFC725;
 }
+
+.button {
+    display: flex;
+    align-items: center;
+    border: none;
+    background-color: transparent;
+    padding: 0;
+    gap: 10px;
+}
+
+.button-item {
+    position: relative;
+}
+
+.button-count {
+    font-weight: 700;
+    font-size: 13px;
+    color: #FFFFFF;
+    background-color: #F37335;
+    border-radius: 100%;
+    height: 17px;
+    width: 17px;
+    position: absolute;
+    text-align: center;
+    line-height: 1.3;
+    bottom: 3px;
+    right: -4px;
+
+}
+
+.button-text {
+    font-weight: 700;
+    font-size: 15px;
+    color: #443737;
+}
+
+.bg {
+    padding: 142px 0;
+    background-image: url(../images/bg.jpg);
+    background-size: cover;
+    background-position: center center;
+    text-align: center;
+    color: #fff;
+}
+
+.breadcrumbs {
+    padding-left: 0;
+    margin-top: 0;
+    list-style-type: none;
+    display: flex;
+    justify-content: center;
+    gap: 16px;
+}
+
+.breadcrumbs a {
+    text-decoration: none;
+    color: #dedede;
+    font-size: 15px;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.breadcrumbs a::before {
+    content: '/';
+    position: relative;
+    left: -7px;
+}
+
+.breadcrumbs li:first-child a::before { /*убираем / у первой ссылки*/
+    display: none;
+}
+
+.title {
+    font-weight: 700;
+    font-size: 79px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.description {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 15px;
+    line-height: 1.5;
+    color: #faf9f9;
+    max-width: 320px;
+    margin: 0 auto;
+}
