--- a/styles/main.css
+++ b/styles/main.css
@@ -303,7 +303,7 @@ header {
     margin-top: 8px;
 }
 
-.menu-grid-btn {
+/*.menu-grid-btn {
     display: block;
     margin: 0 auto;
     background-color: #FBB731;
@@ -317,13 +317,42 @@ header {
     margin-top: 20px;  
     cursor: pointer;
 
+}*/
+
+
+.menu-grid-btn {
+    display: flex;
+    margin: 0 auto;
+    justify-content: center;
+    background-color: #FBB731;
+    border-radius: 5px;
+    padding: 10px 32px;
+    border: none;
+    color: #1E2F40;
+    font-weight: 700;
+    font-size: 14px;
+    text-transform: uppercase;
+    gap: 9px;
+    cursor: pointer;
+    margin-top: 20px; 
+
 }
 
-.menu-grid-icon {
+/*.menu-grid-icon {
     position: relative;
     content: url(../images/cart-menu.svg);
     top: 4px;
     right: 5px;
+    height: 18px;
+    width: 18px;
+}*/
+
+
+.menu-grid-icon {
+    background-image: url(../images/cart-menu.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: block;
     height: 18px;
     width: 18px;
 }
@@ -331,4 +360,76 @@ header {
 .indent {
     margin-top: 104px;
     margin-bottom: 140px;
+}
+
+.footer {
+    background: #1E2F40;
+    color: #fff;
+    padding-top: 117px;
+    padding-bottom: 106px;
+    margin-top: 140px;
+}
+
+.footer-box {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-logo {
+    width: 63px;
+    height: 56px;
+}
+
+.footer-item {
+    flex: 0 0 auto;
+}
+
+.footer-item h2 {
+    font-size: 20px;
+    font-weight: 800;
+    text-transform: uppercase;
+    margin-bottom: 19px;
+    margin-top: 0;
+}
+
+
+
+.footer-item li {
+    margin-bottom: 9px;
+    font-family:  'Open Sans',sans-serif;
+    font-size: 15px;
+    color: #faf9f9;
+    font-weight: 700;
+    line-height: 24px;
+
+}
+
+.footer-item a {
+    color: #dedede;
+    text-decoration: none;
+    font-weight: 400;
+}
+
+.footer-item span {
+    color: #dedede;
+    display: block;
+    font-weight: 400;
+    margin-bottom: 2px;
+
+}
+
+.footer-tel ul {
+    font-size: 20px;
+    color: #fbb731;
+    margin-top: 0;
+    font-weight: 900;
+}
+
+.footer-tel li {
+    margin-bottom: 12px;
+}
+
+.footer-list {
+    padding-left: 0;
+    list-style-type: none;
 }
