--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Nunito Sans', sans-serif;
 
+
 }
 
 .container {
@@ -10,6 +11,9 @@ body {
     padding-right: 15px;
 }
 
+header {
+    border-bottom: 1px solid #dedede;
+}
 
 .header {
     padding-top: 26px;
@@ -18,6 +22,12 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+.header-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-basis: 68.5%;
 }
 
 .header-logo {
@@ -42,6 +52,12 @@ body {
     font-weight: 600;
     color: #443737;
     text-decoration: none;
+    transition: 0.3s;
+}
+
+
+.header-nav a:hover {
+    color: #FFC725;
 }
 
 .header-nav a::after {
@@ -66,6 +82,7 @@ body {
     background-color: transparent;
     padding: 0;
     gap: 10px;
+    cursor: pointer;
 }
 
 .button-item {
@@ -101,6 +118,7 @@ body {
     background-position: center center;
     text-align: center;
     color: #fff;
+    margin-bottom: 140px;
 }
 
 .breadcrumbs {
@@ -109,7 +127,7 @@ body {
     list-style-type: none;
     display: flex;
     justify-content: center;
-    gap: 16px;
+    gap: 7px;
 }
 
 .breadcrumbs a {
@@ -117,12 +135,23 @@ body {
     color: #dedede;
     font-size: 15px;
     font-family: 'Open Sans', sans-serif;
+    transition: 0.3s;
+}
+ 
+
+.breadcrumbs a:hover {
+    color: #FFC725;
+}
+
+.breadcrumbs a:hover::before {
+    color: #dedede;
 }
 
 .breadcrumbs a::before {
     content: '/';
     position: relative;
-    left: -7px;
+    left: -3px;
+    pointer-events: none;
 }
 
 .breadcrumbs li:first-child a::before { /*убираем / у первой ссылки*/
@@ -132,15 +161,468 @@ body {
 .title {
     font-weight: 700;
     font-size: 79px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 17px;
+    margin-bottom: 20px;
+    text-transform: capitalize;
+
 }
 
 .description {
     font-family: 'Open Sans', sans-serif;
     font-size: 15px;
-    line-height: 1.5;
+    line-height: 1.6;
     color: #faf9f9;
     max-width: 320px;
     margin: 0 auto;
 }
+
+
+
+.banner-box {
+    position: relative;
+    background-image: url(../images/banner-bg.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    padding: 100px 100px 120px;
+    margin-bottom: 80px;
+   
+}
+
+.banner-title {
+
+    margin: 0;
+    color: #fff;
+    font-size: 60px;
+    font-weight: 900;
+    margin-bottom: 12px;
+
+    
+}
+
+.banner-title span {
+
+    background-color: #F37335;
+    font-weight: 600;
+    font-size: 14px;
+    text-transform: uppercase;
+    padding: 5px 0;
+    border-radius: 14px;
+    font-family: 'Open Sans', sans-serif;
+    display: block;
+    max-width: 96px;
+    text-align: center;
+    margin-bottom: 9px;
+}
+
+.banner-text {
+    max-width: 353px;
+    color: #faf9f9;
+    font-size: 15px;
+    font-family: 'Open Sans', sans-serif;
+    line-height: 1.6 ;
+    margin-top: 0;
+    margin-bottom: 35px;
+}
+
+.banner-link {
+    color: #1E2F40;
+    font-size: 14px;
+    font-weight: 700;
+    background-color: #fbb731;
+    border-radius: 5px;
+    text-decoration: none;
+    text-transform: uppercase;
+    padding: 18px 25px;
+    border: 1px solid #fbb731;
+    transition: 0.2s;
+
+
+
+}
+
+
+.banner-link:hover {
+    background-color: transparent;
+    color: #fbb731; ;
+}
+
+.menu {
+    padding-top: 20px;
+}
+
+.menu-header {
+    display: flex;     
+    align-items: center;
+    justify-content: space-between;
+}
+
+.menu-title {
+    font-size: 44px;
+    font-weight: 700;
+    text-transform: uppercase;
+    color: #1b2a49;
+    margin: 0;
+}
+
+.menu-select {
+    border: 1px solid #dedede;
+    border-radius: 22px;
+    padding: 13px 30px;
+    color: #443737;
+    font-size: 15px;
+    appearance: none;
+    flex-basis: 279px; /*ширина флекса*/
+    background-image: url(../images/arrow.svg);
+    background-size: 12.79px 7.75px;
+    background-repeat: no-repeat;
+    background-position: 89% center;
+}
+
+
+.menu-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    margin-top: 40px;
+    grid-row-gap: 56px;
+}
+
+.menu-grid-cover {
+    width: 100%; /*Устанавливаем ширину, чтобы картинки не ломались при адаптиве*/
+    height: 430px;
+    position: relative;
+    overflow: hidden;
+}
+
+.menu-grid-cover img {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    object-fit: cover;
+    width: 100%;
+    height: 430px;
+}
+
+.menu-grid-title {
+    margin: 0;
+    font-weight: 600;
+    font-size: 30px;
+    color: #1b2a49;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.menu-grid-price {
+    color: #979797;
+    font-weight: 700;
+    font-size: 20px;
+    text-align: center;
+    margin: 0;
+    margin-top: 8px;
+}
+
+/*.menu-grid-btn {
+    display: block;
+    margin: 0 auto;
+    background-color: #FBB731;
+    border-radius: 5px;
+    padding: 8px 36px;
+    border: none;
+    color: #1E2F40;
+    font-weight: 700;
+    font-size: 14px;
+    text-transform: uppercase;
+    margin-top: 20px;  
+    cursor: pointer;
+
+}*/
+
+
+.menu-grid-btn {
+    display: flex;
+    margin: 0 auto;
+    justify-content: center;
+    background-color: #FBB731;
+    border-radius: 5px;
+    padding: 10px 32px;
+    border: none;
+    color: #1E2F40;
+    font-weight: 700;
+    font-size: 14px;
+    text-transform: uppercase;
+    gap: 9px;
+    cursor: pointer;
+    margin-top: 20px; 
+    transition: 0.3s;
+
+}
+.menu-grid-btn:hover {
+    background-color: #F37335;
+}
+
+/*.menu-grid-icon {
+    position: relative;
+    content: url(../images/cart-menu.svg);
+    top: 4px;
+    right: 5px;
+    height: 18px;
+    width: 18px;
+}*/
+
+
+.menu-grid-icon {
+    background-image: url(../images/cart-menu.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: block;
+    height: 18px;
+    width: 18px;
+}
+
+.indent {
+    margin-top: 104px;
+    margin-bottom: 140px;
+}
+
+.footer {
+    background: #1E2F40;
+    color: #fff;
+    padding-top: 117px;
+    padding-bottom: 106px;
+    margin-top: 140px;
+}
+
+.footer-box {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-logo {
+    width: 63px;
+    height: 56px;
+}
+
+.footer-item {
+    flex: 0 0 auto;
+}
+
+.footer-item h2 {
+    font-size: 20px;
+    font-weight: 800;
+    text-transform: uppercase;
+    margin-bottom: 19px;
+    margin-top: 0;
+}
+
+
+
+.footer-list li {
+    margin-bottom: 9px;
+    font-family:  'Open Sans',sans-serif;
+    font-size: 15px;
+    color: #faf9f9;
+    font-weight: 700;
+    line-height: 24px;
+
+}
+
+.footer-list a {
+    color: #dedede;
+    text-decoration: none;
+    font-weight: 400;
+    transition: 0.3s;
+}
+
+.footer-list a:hover {
+    color: #fbb731;
+}
+
+.footer-item span {
+    color: #dedede;
+    display: block;
+    font-weight: 400;
+    margin-bottom: 2px;
+
+}
+
+
+.footer-list-tel {
+    margin-top: 0;
+}
+
+.footer-list-tel li {
+    margin-bottom: 12px;
+}
+
+
+.footer-list-tel a {
+    font-size: 20px;
+    color: #fbb731;
+    font-weight: 900;
+    transition: 0.3s;
+}
+
+.footer-list-tel a:hover {
+    color: #fff;
+}
+
+.footer-list {
+    padding-left: 0;
+    list-style-type: none;
+}
+
+.button-up {
+    background-color: #FBB731;
+    font-weight: 700;
+    font-size: 14px;
+    text-transform: uppercase;
+    color: #1E2F40;
+    text-decoration: none;
+    padding: 5px 20px;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    border-radius: 5px;
+    transition: 1s;
+}
+.button-up:hover {
+    background-color: #F37335;
+}
+
+.button-up.hidden {
+    opacity: 0;
+}
+
+.button-up.visible {
+    opacity: 1;
+}
+
+/*style index*/
+
+.main {
+    background: linear-gradient(180deg, #0C4C7B -100%, #1E2F40 100%);
+}
+.wrapper {
+    max-width: 1180px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+}
+.content {
+    color: #FAF9F9;
+    flex: 0 0 580px;
+    padding-top: 170px;
+    padding-bottom: 170px;
+}
+.content-title {
+    font-size: 120px;
+    font-weight: 800;
+    text-transform: uppercase;
+    line-height: 120px;
+    margin-bottom: 40px;
+    margin-top: 0;
+}
+.content-title span {
+    color: #FBB731;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 38px;
+    display: block;
+    margin-bottom: 10px;
+    margin-bottom: 0;
+}
+.content-text {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 19px;
+    line-height: 1.4;
+    margin-bottom: 42px;
+}
+.content-link,
+.promo a {
+    color: #1E2F40;
+    background-color: #FBB731;
+    border-radius: 5px;
+    text-decoration: none;
+    padding: 20px 45px;
+    display: inline-block;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 700;
+}
+.visual {
+    flex-grow: 1;
+    display: flex;
+    justify-content: flex-end;
+    position: relative;
+}
+.visual-bg {
+    width: 432px;
+    height: 100%;
+    background: linear-gradient(2.42deg, #F37335 -19.6%, #FBB731 100.79%, #FDC830 100.79%);
+}
+.main img {
+    width: 829px;
+    position: absolute;
+    right: -168px;
+}
+.promo {
+    padding-top: 186px;
+    padding-bottom: 46px;
+}
+.promo-left,
+.promo-right {
+    flex: 0 0 49%;
+    color: #fff;
+    box-sizing: border-box;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+.promo-left {
+    background-image: url(../images/promo-left.png);
+    padding: 116px 50px;
+}
+.promo-right {
+    background-image: url(../images/promo-right.png);
+    padding: 102px 50px;
+}
+.sale {
+    font-size: 14px;
+    font-weight: 900;
+    background: #F37335;
+    padding: 5px 19px;
+    border-radius: 14px;
+    display: inline-block;
+    text-transform: uppercase;
+    margin-bottom: 3px;
+    margin-top: 0;
+}
+.cost {
+    font-size: 60px;
+    font-weight: 900;
+    margin-bottom: 8px;
+    margin-top: 0;
+}
+.promo-description {
+    font-family: 'Open Sans', sans-serif;
+    color: #FAF9F9;
+    font-size: 15px;
+    line-height: 24px;
+    margin-bottom: 0;
+}
+.promo-left .promo-description {
+    max-width: 392px;
+}
+.promo-right .promo-description {
+    max-width: 300px;
+    margin-bottom: 20px;
+}
+.free {
+    font-size: 44px;
+    font-weight: 700;
+    margin-bottom: 10px;
+    margin-top: 0;
+}
+
