--- a/styles/main.css
+++ b/styles/main.css
@@ -52,6 +52,12 @@ header {
     font-weight: 600;
     color: #443737;
     text-decoration: none;
+    transition: 0.3s;
+}
+
+
+.header-nav a:hover {
+    color: #FFC725;
 }
 
 
@@ -134,6 +140,16 @@ header {
     color: #dedede;
     font-size: 15px;
     font-family: 'Open Sans', sans-serif;
+    transition: 0.3s;
+}
+ 
+
+.breadcrumbs a:hover {
+    color: #FFC725;
+}
+
+.breadcrumbs a:hover::before {
+    color: #dedede;
 }
  
 
@@ -181,9 +197,9 @@ header {
     background-image: url(../images/banner-bg.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center center;
+    background-position: ce center;
     padding: 100px 100px 120px;
-    margin-bottom: 100px;
+    margin-bottom: 80px;
    
 }
 
@@ -233,6 +249,7 @@ header {
     text-transform: uppercase;
     padding: 18px 25px;
     border: 1px solid #fbb731;
+    transition: 0.2s;
 
 
 
@@ -242,6 +259,10 @@ header {
 .banner-link:hover {
     background-color: transparent;
     color: #fbb731; ;
+}
+
+.menu {
+    padding-top: 20px;
 }
 
 .menu-header {
@@ -348,6 +369,7 @@ header {
     gap: 9px;
     cursor: pointer;
     margin-top: 20px; 
+    transition: 0.3s;
 
 }
 .menu-grid-btn:hover {
@@ -372,6 +394,11 @@ header {
     height: 18px;
     width: 18px;
 }
+
+.menu-other {
+    padding-top: 100px;
+}
+
 
 .indent {
     margin-top: 104px;
@@ -424,6 +451,7 @@ header {
     color: #dedede;
     text-decoration: none;
     font-weight: 400;
+    transition: 0.3s;
 }
 
 .footer-list a:hover {
@@ -452,6 +480,7 @@ header {
     font-size: 20px;
     color: #fbb731;
     font-weight: 900;
+    transition: 0.3s;
 }
 
 .footer-list-tel a:hover {
@@ -461,6 +490,32 @@ header {
 .footer-list {
     padding-left: 0;
     list-style-type: none;
+}
+
+.button-up {
+    background-color: #FBB731;
+    font-weight: 700;
+    font-size: 14px;
+    text-transform: uppercase;
+    color: #1E2F40;
+    text-decoration: none;
+    padding: 5px 20px;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    border-radius: 5px;
+    transition: 1s;
+}
+.button-up:hover {
+    background-color: #F37335;
+}
+
+.button-up.hidden {
+    opacity: 0;
+}
+
+.button-up.visible {
+    opacity: 1;
 }
 
 /*style index*/
@@ -479,6 +534,8 @@ header {
     flex: 0 0 580px;
     padding-top: 170px;
     padding-bottom: 170px;
+    
+    
 }
 .content-title {
     font-size: 120px;
@@ -487,6 +544,7 @@ header {
     line-height: 120px;
     margin-bottom: 40px;
     margin-top: 0;
+   
 }
 .content-title span {
     color: #FBB731;
@@ -502,6 +560,8 @@ header {
     font-size: 19px;
     line-height: 1.4;
     margin-bottom: 42px;
+    
+    
 }
 .content-link,
 .promo a {
@@ -519,17 +579,21 @@ header {
     flex-grow: 1;
     display: flex;
     justify-content: flex-end;
-    position: relative;
+    
 }
 .visual-bg {
     width: 432px;
     height: 100%;
     background: linear-gradient(2.42deg, #F37335 -19.6%, #FBB731 100.79%, #FDC830 100.79%);
 }
+
+
+
 .main img {
     width: 829px;
     position: absolute;
     right: -168px;
+    
 }
 .promo {
     padding-top: 186px;
@@ -590,3 +654,321 @@ header {
     margin-top: 0;
 }
 
+/*Modal*/
+
+.burger {
+    height: 22px;
+    width: 34px;
+    background-image: url(../images/burger.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+.modal {
+    background-color: #fff8dc;
+    max-width: 500px;
+    text-align: center;
+    position: absolute;
+    top: -400px;
+    left: 0;
+    right: 0;
+    margin: 20px auto 0;
+    padding: 40px 30px;
+    box-sizing: border-box;
+    transition: .5ss;
+}
+
+.modal .header-nav {
+    flex-direction: column;
+    align-items: center;
+    gap: 23px;
+    margin: 0;
+}
+
+.burger-close {
+    width: 22px;
+    height: 22px;
+    background-image: url(../images/close.svg);
+    background-color: transparent;
+    background-size: contain;
+    background-repeat: no-repeat;
+    border: none;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    cursor: pointer;
+}
+
+/*Response*/
+
+@media (min-width: 1001px) {
+    .footer-list + .footer-list-tel {
+        display: none;  /*Выключаем список при заданной минимальной ширине*/
+    }
+}
+
+@media (min-width: 766px) {
+    .header-burger {
+        display: none;
+    }
+}
+
+@media (max-width: 1000px) {
+    .container {
+        max-width: 738px;
+    }
+    .header-logo {
+        width: 150px;
+        height: 48px;
+        background-size: contain;
+    }
+    .header-nav {
+        gap: 22px;
+    }
+    .header-item {
+        flex-basis: 75.5%;
+    }
+
+    .bg {
+        margin-bottom: 72px;
+    }
+    .banner-box {
+        background-position: -80px center;
+        padding: 100px 40px 120px;
+    }
+
+    .menu-grid {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 50px 15px;
+    }
+
+    .menu-other {
+        overflow: hidden;
+        height: 558px;
+        padding-top: 89px;
+    }
+
+    .menu-other .menu-grid {
+        display: flex;
+        width: auto;
+        overflow-x: scroll;
+        overflow-y: hidden;
+        padding-bottom: 50px;
+    }
+
+    .menu-other .menu-grid-item {
+        flex: 0 0 281px;
+    }
+
+    .menu-other .menu-grid-cover,
+    .menu-other .menu-grid-cover img {
+        height: 320px;
+    }
+
+
+
+    .footer {
+        padding: 59px;
+    }
+
+
+    .footer-tel {
+        display: none;
+    }
+
+    .footer-list + .footer-list-tel {
+        display: block;
+    }
+
+
+    /*index*/
+
+   
+
+
+}
+
+@media (max-width: 765px) {
+    nav {
+        display: none;
+    } 
+
+    .header {
+        gap: 21px;
+    }
+}
+
+@media (max-width: 567px) {
+
+    .header {
+        padding-top: 19px;
+        padding-bottom: 19px;
+    }
+
+    .header-logo {
+        width: 116px;
+        height: 37px;
+    }
+
+    .title {
+        font-size: 38px;
+        margin-top: 28px;
+        margin-bottom: 11px;
+    }
+
+    .breadcrumbs a {
+        font-size: 15px;
+    }
+
+    .description {
+        font-size: 12px;
+        max-width: 281px;
+    }
+
+    .bg {
+        padding: 55px 0;
+        margin-bottom: 30px;
+    }
+
+    .banner-box {
+        padding: 35px 24px 54px;
+        background-position: 17% center;
+        margin-bottom: 30px;
+    }
+
+    .menu-title {
+        font-size: 27px;
+    }
+
+    .menu-select {
+        font-size: 12px;
+        flex-basis: 136px;
+    }
+
+    .menu-grid {
+        margin-top: 31px;
+        gap: 24px 12px;
+    }
+
+    .menu-grid-title {
+        font-size: 13px;
+        margin-top: 7px;
+        
+    }
+
+    .menu-grid-price {
+        font-size: 16px;
+    }
+
+    .menu-grid-btn {
+        padding: 10px 22px;
+        margin-top: 7px;
+    }
+
+    .menu-grid-cover {
+        height: 180px;
+    }
+
+    .menu-grid-cover img {
+        height: 180px;
+    }
+
+
+    
+
+
+    .footer {
+        padding: 59px 13px;
+        margin-top: 0;
+        position: relative;
+        
+    }
+    .footer-box {
+        display: flex;
+        flex-direction: column;
+    }
+
+
+    .footer-item h2 {
+        font-size: 18px;
+        margin-top: 41px;
+    }
+
+    .footer-list-tel {
+        position: absolute;
+        top: 57px;
+        right: 15px;
+    }
+    
+    
+}
+
+
+@media (max-width: 360px) {
+    .header-logo {
+        width: 116px;
+        height: 37px;
+        background-size: contain;
+    }
+}
+
+@media (max-width: 320px) {
+    .banner-box {
+        padding: 35px 24px 54px;
+        background-position: 25% center;
+    }
+}
+
+
+/*media for index.html*/
+
+@media (max-width: 1000px) {
+    .wrapper {
+        max-width: 738px;
+        margin-left: 28px;
+    }
+
+    .main img {
+        width: 496px;
+        right: -126px;
+        bottom: -84px;
+        z-index: 1;
+        
+    }
+    
+
+    .visual-bg {
+        width: 198px;
+    }
+
+    .content {
+        padding-top: 42px;
+    }
+
+    .content-title {
+        font-size: 86px;
+        line-height: 101px;
+    }
+
+    .content-title span {
+        font-size: 22px;
+        line-height: 27px;
+    }
+
+    .content-text {
+        font-size: 14px;
+        margin-top: 27px;
+        width: 410px;
+        margin-bottom: 30px;
+    }
+
+    .content-link {
+        font-size: 13px;
+        padding: 17px 40px;
+    }
+
+    
+}
