--- a/styles/main.css
+++ b/styles/main.css
@@ -830,7 +830,7 @@ header {
 
     .bg {
         padding: 55px 0;
-        margin-bottom: 30px;
+        margin-bottom: 36px;
     }
 
     .banner-box {
@@ -917,8 +917,12 @@ header {
 
 @media (max-width: 320px) {
     .banner-box {
-        padding: 35px 24px 54px;
+        padding: 35px 15px 54px;
         background-position: 25% center;
+    }
+
+    .banner-text {
+        max-width: 250px;
     }
 }
 
