--- a/styles/main.css
+++ b/styles/main.css
@@ -1122,6 +1122,133 @@ header {
     
 }
 
+@media (max-width: 765px) { 
+    .content {
+        flex: 0 0 526px;
+        padding-bottom: 123px;
+    }
+
+    .visual {
+        justify-content: flex-start;
+    }
+    .visual-bg {
+        width: 198px;
+    }
+
+    .content-title span {
+        margin-bottom: 11px;
+    }
+
+    .content-title {
+        margin-bottom: 20px;
+    }
+
+    .content-text {
+        margin-top: 20px;
+        max-width: 406px;
+        font-size: 13px;
+        line-height: 1.5;
+        margin-bottom: 35px;
+    }
+
+    .main img {
+        width: 495px;
+        right: -128px;
+        bottom: -79px;
+    }
+
+    .promo .wrapper {
+        margin-left: 15px;
+    }
+    .promo {
+        padding-top: 109px;
+        flex: 0 0 49%;
+        padding-bottom: 91px;
+    }
+    
+    .promo a {
+        padding: 17px 38px;
+    }
+   
+
+    .promo-left .promo-description {
+        max-width: 291px;
+        font-size: 14px;
+        line-height: 24px;
+        margin-top: 10px;
+        
+
+    }
+
+    .promo-right {
+        background-position: 63% center;
+        background-size: cover;
+        padding: 62px 29px 63px;
+        height: 100%;
+        
+    }
+
+    .promo-right .promo-description {
+        margin-bottom: 10px;
+        margin-top: 0;
+        font-size: 14px;
+
+    }
+
+    .free {
+        margin-bottom: 12px;
+    }
+
+
+    
+
+    .promo-left {
+   
+        padding: 43px 30px 65px;
+        height: 100%;
+        
+        
+    }
+
+    .sale {
+        margin-bottom: 11px;
+        padding: 5px 21px
+       
+    }
+
+    .footer {
+        padding: 62px 2px;
+        margin-top: 50px;
+        position: relative;
+        
+    }
+    .footer-box {
+        display: flex;
+        flex-direction: column;
+        
+    }
+
+
+    .footer-item h2 {
+        font-size: 18px;
+        margin-top: 45px;
+    }
+
+    .footer-item .footer-title {
+        margin-top: 27px;
+        margin-bottom: 23px;
+    }
+
+    .footer-list-tel {
+        position: absolute;
+        top: 57px;
+        right: 15px;
+    }
+
+    
+
+
+}
 
 @media (max-width: 567px) {
 
@@ -1129,7 +1256,7 @@ header {
         padding-bottom: 0;
     }
     .promo .wrapper {
-        display: block;
+        flex-direction: column;
         margin: 0;
     }
 
@@ -1158,6 +1285,96 @@ header {
     }
 
 
+   
+
+    .main img {
+        width: 320px;
+        right: -83px;
+        bottom: -82px;
+    }
+    
+
+    .main .wrapper {
+
+        margin: 0 auto;
+        margin-left: 25px;
+
+    }
+    .content {
+        padding-bottom: 169px;
+        padding-top: 38px;
+        
+    }
+
+    .content-title {
+        font-size: 58px;
+        max-width: 290px;
+        line-height: 1.2;
+        margin-bottom: 0;
+    }
+
+    .content-title span {
+        font-size: 14px;
+        margin-bottom: 10px;
+    }
+
+    .content-text {
+        font-size: 13px;
+        width: 290px;
+        line-height: 1.3;
+        margin-bottom: 35px;
+        
+    }
+
+    .visual-bg {
+        display: none;
+    }
+
+    .main {
+        overflow: hidden;
+    }
+    .promo {
+        padding-top: 95px;
+    }
+
+    .promo-right {
+        background-position: 63% center;
+        background-size: cover;
+        padding: 42px 24px 47px;
+        
+    }
+
+    .promo-left .promo-description {
+        max-width: 250px;
+        font-size: 12px;
+        line-height: 20px;
+        margin-top: 5px;
+
+    }
+
+    .promo-left {
+   
+        padding: 39px 26px 62px;
+        margin-bottom: 22px;
+        
+    }
+    .free {
+        margin-bottom: 17px;
+    }
+    .sale {
+        margin-bottom: 11px;
+        padding: 5px 21px
+       
+    }
+
+    .footer-title {
+        margin-top: 33px;
+    }
+
+    .footer-box {
+        margin-left: 5px;
+    }
+}
     /*.promo .promo-left,
     .promo .promo-right {
         height: 56vw;
@@ -1176,8 +1393,8 @@ header {
         
         .main img {
             width: 298px;
-            right: -83px;
-            bottom: -82px;
+            right: -84px;
+            bottom: -72px
         }
         
 
@@ -1189,7 +1406,7 @@ header {
         }
         .content {
             padding-bottom: 169px;
-            padding-top: 38px;
+            padding-top: 33px;
             
         }
 
@@ -1209,7 +1426,8 @@ header {
             font-size: 13px;
             width: 290px;
             line-height: 1.3;
-            margin-bottom: 35px;
+            margin-bottom: 38px;
+            margin-top: 26px;
             
         }
 
@@ -1227,7 +1445,7 @@ header {
         .promo-right {
             background-position: 63% center;
             background-size: cover;
-            padding: 42px 14px 47px;
+            padding: 42px 14px 46px;
             
         }
 
@@ -1241,12 +1459,16 @@ header {
 
         .promo-left {
        
-            padding: 39px 16px 62px;
+            padding: 39px 16px 65px;
             margin-bottom: 22px;
             
         }
+
+        .promo-right .promo-description {
+            margin-bottom: 22px;
+        }
         .free {
-            margin-bottom: 17px;
+            margin-bottom: 16px;
         }
         .sale {
             margin-bottom: 11px;
@@ -1254,8 +1476,11 @@ header {
            
         }
 
+        .cost {
+            margin-bottom: 4px;
+        }
+
         .footer-title {
             margin-top: 33px;
         }
     }
-}
